--- a/app/views/dams_objects/_simple_object_viewer.html.erb
+++ b/app/views/dams_objects/_simple_object_viewer.html.erb
@@ -2,7 +2,7 @@
 
   <% restrictedNotice = grabRestrictedText(@document['otherNote_json_tesim']) %>
   <% unless restrictedNotice.nil? %>
-    <div class="masked-object">
+    <div class="restricted-notice">
 	    <div>
 	      <%= restrictedNotice %>
 	    </div>
