--- a/app/views/dams_objects/metadata.html.erb
+++ b/app/views/dams_objects/metadata.html.erb
@@ -22,7 +22,7 @@
 <%# BEGIN RESTRICTED NOTICE %>
         <% restrictedNotice = grabRestrictedText(@document['otherNote_json_tesim']) %>
         <% unless restrictedNotice.nil? %>
-          <div class="masked-object">
+          <div class="restricted-notice">
             <div>
              <%= restrictedNotice %>
             </div>
