Fixing Note (physical description) repeats twice in object view.(DHH-553)

--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -1,7 +1,7 @@
 <% collectionsView = defined?(greetingsFromCollectionsView) ? true : false %>
 <% notesToExclude = ['performers','extent','abstract','table of contents','identifier',
         'existence and location of originals','general physical description', 'dimensions',
-        'digital origin'] %>
+        'digital origin', 'physical description'] %>
 
 <% if collectionsView %>
   <% notesToExclude << 'description' %>
