--- a/app/views/shared/fields/_relationships.html.erb
+++ b/app/views/shared/fields/_relationships.html.erb
@@ -9,33 +9,26 @@
 		htmlClose = '</dd>'
 	end
 
-	fieldData = @document["#{prefix}relationship_json_tesim"]
+	fieldData = @document["#{prefix}relationship_json_tesim"] || {}
 %>
-
-	<% if fieldData != nil %>
 
 		<% fieldData.each do |datum| %>
 
-			<% relationship = JSON.parse(datum) %>
+			<% relationship = JSON.parse(datum).sort.to_h %>
+
+      <% if relationship.has_key?("Principal investigator") %>
+				<%= render :partial => 'shared/fields/relationships_data', :locals => {key: "Principal investigator", value: relationship["Principal investigator"], htmlOpen: htmlOpen, htmlClose: htmlClose} %>
+				<% relationship.delete("Principal investigator") %>
+		  <% end %>
+
+      <% if relationship.has_key?("Co-principal investigator") %>
+				<%= render :partial => 'shared/fields/relationships_data', :locals => {key: "Co-principal investigator", value: relationship["Co-principal investigator"], htmlOpen: htmlOpen, htmlClose: htmlClose} %>
+				<% relationship.delete("Co-principal investigator") %>
+		  <% end %>
 
       <% relationship.each do |key, value| %>
-				<% if key == 'Principal investigator' %>
 					<%= render :partial => 'shared/fields/relationships_data', :locals => {key: key, value: value, htmlOpen: htmlOpen, htmlClose: htmlClose} %>
-				<% end %>
 			<% end %>
-
-      <% relationship.each do |key, value| %>
-				<% if key == 'Co-principal investigator' %>
-					<%= render :partial => 'shared/fields/relationships_data', :locals => {key: key, value: value, htmlOpen: htmlOpen, htmlClose: htmlClose} %>
-				<% end %>
-			<% end %>
-
-      <% relationship.each do |key, value| %>
-				<% if key != 'Principal investigator' && key != 'Co-principal investigator' %>
-					<%= render :partial => 'shared/fields/relationships_data', :locals => {key: key, value: value, htmlOpen: htmlOpen, htmlClose: htmlClose} %>
-				<% end %>
-			<% end %>
-
 		<% end %>
 
-	<% end %>
+		
