--- a/app/views/layouts/ucsdlib.html.erb
+++ b/app/views/layouts/ucsdlib.html.erb
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<%= render :partial => 'layouts/head_common' %>
+		<%= render :partial => 'layouts/twitter_card' %>
 		<link href="<%= opensearch_catalog_path(:format => 'xml', :only_path => false) %>" title="<%= application_name%>" type="application/opensearchdescription+xml" rel="search"/>
 
 	  <script src="//libraries.ucsd.edu/jwplayer/jwplayer.js"></script>
