--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -1,7 +1,10 @@
 <%
 	@page_title =  "#{grabTitle}"
+	@sensitive_msg = "#{t('sensitive_message')}"
 %>
 
+<%= javascript_tag "var sensitive_popup = '#{@sensitive_msg}';" %>
+  
 <% @ds = flash[:deriv] %>
 <%# if @ds != nil %>
   <%#= button_to( "Generate Derivatives", deriv_path( @document['id'], @ds ), remote: true, data: {disable_with: 'Generating...'}, form: {id: "generate_derivatives"}, class: 'btn' ) %>
