--- a/app/views/layouts/_twitter_card.html.erb
+++ b/app/views/layouts/_twitter_card.html.erb
@@ -18,7 +18,8 @@
     elsif @document[:collection_name_tesim]
       description = "Item from the " + @document[:collection_name_tesim].first + " collection"
     end
-    description = "Item from the UC San Diego Library Digital Collections" if description.blank?
+    rec_type = @document["active_fedora_model_ssi"] == 'DamsObject' ? "Item" : "Collection"
+    description = "#{rec_type} from the UC San Diego Library Digital Collections" if description.blank?
     description = truncate(description, length: 199)
   %>
   <meta name="twitter:description" content="<%= description %>">
