Renaming DAMS 5 to DAMS 4.2 Preview (DHH-603)

--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -46,7 +46,7 @@
 		    <ul class="unstyled sidebar-button-list">
 		      <li><%= link_to "<i class='icon-plus-sign'></i> RDF View".html_safe, rdf_dams_object_path(@document['id']), class: "btn btn-block btn-small btn-link"%>
 		      <li><%= link_to "<i class='icon-plus-sign'></i> Data View".html_safe, data_dams_object_path(@document['id']), class: "btn btn-block btn-small btn-link"%>
-		      <li><%= link_to "<i class='icon-plus-sign'></i> DAMS5 View".html_safe, dams5_dams_object_path(@document['id']), class: "btn btn-block btn-small btn-link"%>
+		      <li><%= link_to "<i class='icon-plus-sign'></i> DAMS 4.2 Preview".html_safe, dams42_dams_object_path(@document['id']), class: "btn btn-block btn-small btn-link"%>
 		    </ul>
 		  </div>
 		<% end %>
