--- a/app/views/shared/fields/_scope_of_content.erb
+++ b/app/views/shared/fields/_scope_of_content.erb
@@ -19,7 +19,7 @@
 		end
 	end
 	fieldData = @document["#{prefix}scopeContentNote_json_tesim"]
-	if fieldData != nil
+	if fieldData != nil && !isCollection
 		htmlOpen %= 'Scope Content Note'.pluralize(fieldData.count)
 		concat htmlOpen.html_safe		
 		fieldData.each do |datum|
