Fixing the complex object components display problem. DHH-611

--- a/app/views/dams_objects/_component_tree.html.erb
+++ b/app/views/dams_objects/_component_tree.html.erb
@@ -6,7 +6,7 @@
 <% if component_count > 0   %>
 
 	<% init_Tree component_count %>
-	<button type="button" id="sidebar-header" class="btn btn-block btn-link dams-components-button sidebar-header tree-expanded">
+	<button type="button" onclick="dp.COV.showComponent(1);" id="sidebar-header" class="btn btn-block btn-link dams-components-button sidebar-header tree-expanded">
 		<strong>Components of "<%= grabTitle %>"</strong>
 	</button>
 	<div class="components-tree">
