--- a/app/views/shared/fields/_collection.html.erb
+++ b/app/views/shared/fields/_collection.html.erb
@@ -23,6 +23,11 @@
            collection = JSON.parse(datum)
 		   collectionName = (collection['name'] == '') ? 'MISSING_COLLECTION_NAME' : collection['name'] # TEMP FIX FOR MISSING COLLECTION NAME
            thumb = collection['thumbnail']
+           visibility = collection['visibility']
+
+           # Check anonymous user for linked collection access 
+           anons = User.anonymous(request.remote_ip)
+           if current_user != nil || visibility == 'public' || visibility == anons
 %>
 		<li>
 			<%= link_to( dams_collection_path(collection['id']) ) do %>
@@ -30,6 +35,7 @@
 			<% end %>
 		</li>
 <%
+         end
 	 end
 
 	 concat htmlClose.html_safe
