Fixed the object viewer to display full title with non filing characters. (DHH-629)

--- a/app/views/shared/fields/_title.html.erb
+++ b/app/views/shared/fields/_title.html.erb
@@ -7,6 +7,7 @@
    partNumber = nil
    translationVariant = nil
    subtitleVal = nil
+   nonSortVal = nil
 %>
 
 <% if fieldData != nil %>
@@ -16,6 +17,7 @@
       result = JSON.parse(datum)
       partName = result['partName'] || ""
       partNumber = result['partNumber'] || ""
+      nonSortVal = result['nonSort'] || ""
       subtitle = result['subtitle'] || ""
       translationVariant = result['translationVariant'] || ""
 
@@ -30,7 +32,7 @@
       end
       
       if !result['value'].blank?
-         title = result['value']
+         title = (nonSortVal.blank? ? "":nonSortVal + " ") + result['value']
         break
       else
         title = result['name'] || ""
