Change display settings for accesion numbers. DHH-621

--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -28,7 +28,7 @@
 <% else %>
   <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier',
           :exclude_label => ['ark', 'ark id', 'collection number', 'call number', 'filename',
-          'local', 'negative', 'negative number', 'oclc number', 'roger record', 'sequence']} %>
+          'local', 'negative', 'negative number', 'oclc number', 'roger record', 'sequence', 'accession number']} %>
 <% end %>
 
 <%= render :partial => 'shared/fields/note', :locals => {:type => 'general physical description'} %>
