Allow for download of more than one master file. DHH-559

--- a/app/assets/stylesheets/custom-object-viewer.css.scss
+++ b/app/assets/stylesheets/custom-object-viewer.css.scss
@@ -71,6 +71,7 @@ $complexFile: #AC6F2B !default;
 
 .dams-download-button{margin:0;}
 .dams-download-button p{margin: 0;text-align: center;}
+.pull-right-space {    float: right; margin-left: 10px;}
 
 // Breadcrumbs
 .dams-breadcrumbs .breadcrumb{font-size: 12px;background-color:transparent;padding: 0;}
