--- a/app/views/dams_objects/_simple_object_viewer.html.erb
+++ b/app/views/dams_objects/_simple_object_viewer.html.erb
@@ -20,10 +20,10 @@
 		<% when 'document-service' %>
 	    <%= render :partial => 'document_viewer', :locals => {:filePath => service_file_path, :displayFilePath => display_file_path, :downloadDerivativePath => download_derivative_path} %>
 			<%= render :partial => 'metadata_data_file', :locals => {:fileName => service_file} %>
-			<%= render :partial => 'data_viewer', :locals => {:displayFilePath => display_file_path, :filePath => service_file_path, :objectType => 'simple', :pdfFilePath => pdf_file_path} %>
+			<%= render :partial => 'data_viewer', :locals => {:displayFilePath => display_file_path, :filePath => service_file_path, :objectType => 'simple', :pdfFilePath => pdf_file_path, :sourcefilePath => source_file_path} %>
 		<% when 'data-service' %>
 			<%= render :partial => 'metadata_data_file', :locals => {:fileName => service_file} %>
-			<%= render :partial => 'data_viewer', :locals => {:filePath => service_file_path, :objectType => 'simple'} %>
+			<%= render :partial => 'data_viewer', :locals => {:filePath => service_file_path, :objectType => 'simple', :sourcefilePath => source_file_path} %>
 		<% else %>
 			<%= render :partial => 'default_viewer', :locals => {:objectType => 'simple'} %>
 		<% end %>
