--- a/app/views/dams_objects/_data_viewer.html.erb
+++ b/app/views/dams_objects/_data_viewer.html.erb
@@ -11,7 +11,7 @@
 	%>
 
 	<div class="form-actions dams-download-button">
-        <% if (defined?(sourcefilePath) && sourcefilePath != filePath)%>
+        <% if (defined?(sourcefilePath) && !sourcefilePath.nil? && sourcefilePath != filePath)%>
             <a class="btn <%=btnColor%> pull-right-space" href="<%= sourcefilePath %>"><i class="icon-download-alt icon-white"></i> Download <%= File.extname(sourcefilePath.gsub('/download','')).upcase.gsub('.','')%> file</a>
         <% end %>	
 		<a class="btn <%=btnColor%> pull-right" href="<%= filePath %>"><i class="icon-download-alt icon-white"></i> Download file</a>
