--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -65,6 +65,6 @@
 <%= render :partial => 'shared/fields/rights_holder' %>
 <%= render :partial => 'shared/fields/unit' %>
 
-<%# if can? :update, @document %>
-  <%# <!-- dams:note internalOnly=yes placeholder --> %>
-<%# end %>
+<% if can? :update, @document %>
+  <%= render :partial => 'shared/fields/note', :locals => { :internal => true } %>
+<% end %>
