Refactored codes to make all other components to use the full title with non-filing characters. (DHH-629)

--- a/app/views/shared/fields/_title.html.erb
+++ b/app/views/shared/fields/_title.html.erb
@@ -17,7 +17,6 @@
       result = JSON.parse(datum)
       partName = result['partName'] || ""
       partNumber = result['partNumber'] || ""
-      nonSortVal = result['nonSort'] || ""
       subtitle = result['subtitle'] || ""
       translationVariant = result['translationVariant'] || ""
 
@@ -32,7 +31,7 @@
       end
       
       if !result['value'].blank?
-         title = (nonSortVal.blank? ? "":nonSortVal + " ") + result['value']
+         title = getFullTitle result
         break
       else
         title = result['name'] || ""
