--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -28,7 +28,7 @@
 <% else %>
   <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier',
           :exclude_label => ['ark', 'ark id', 'collection number', 'call number', 'filename',
-          'local', 'negative', 'negative number', 'oclc number', 'roger record', 'sequence']} %>
+          'local', 'negative', 'negative number', 'oclc number', 'roger record', 'sequence', 'accession number']} %>
 <% end %>
 
 <%= render :partial => 'shared/fields/note', :locals => {:type => 'general physical description'} %>
@@ -60,9 +60,9 @@
   <%= render :partial => 'shared/fields/license' %>
   <%= render :partial => 'shared/fields/statute' %>
   <%= render :partial => 'shared/fields/other_rights' %>
-  <%= render :partial => 'shared/fields/rights_holder' %>
 <% end %>
 
+<%= render :partial => 'shared/fields/rights_holder' %>
 <%= render :partial => 'shared/fields/unit' %>
 
 <%# if can? :update, @document %>
