Added all date types with labels to en.yml and change it to use the Hash#fetch function. (DHH-661)

--- a/app/views/shared/fields/_date.html.erb
+++ b/app/views/shared/fields/_date.html.erb
@@ -23,10 +23,7 @@
 		    <%
 		      date_labels = t('date_labels')
 		      type = date['type']
-		      datetype = date_labels[type.to_sym]
-		      if (datetype.blank?)
-		        datetype = type.capitalize + ' Date'
-		      end
+		      datetype = date_labels.fetch(type.to_sym, type.capitalize + ' Date')
 		    %>
 		    <% htmlOpen = htmlOpenTemp %>
 		    <% htmlOpen %= datetype %>
