Fixing the download issue for CEO content in curator mode. DHH-654

--- a/app/views/dams_objects/_complex_object_viewer.html.erb
+++ b/app/views/dams_objects/_complex_object_viewer.html.erb
@@ -33,7 +33,7 @@
         if source_file != nil
           download_file_path = download_path(ark,"_#{source_file}")
         elsif service_file != nil
-          download_file_path = download_path(ark,"_#{service_file}")
+          download_file_path = service_file_path
         elsif display_file != nil
           download_file_path = download_path(ark,"_#{display_file}")
         else
